--- a/dummy.html
+++ b/dummy.html
@@ -15,7 +15,7 @@
 <link rel="modulepreload" href="./_node/@turf/turf@7.1.0/index.js">
 <link rel="modulepreload" href="./_npm/d3-require@1.3.0/_esm.js">
 <link rel="modulepreload" href="./_import/components/radialglyph.e10c9304.js">
-<link rel="modulepreload" href="./_import/components/gridded-glyphmaps/index.min.e9355c65.js">
+<link rel="modulepreload" href="./_import/components/gridded-glyphmaps/index.min.e22a1d11.js">
 <link rel="modulepreload" href="./_import/components/osgb/index.1d2476df.js">
 <link rel="modulepreload" href="./_import/components/utils.ec49f1d6.js">
 <link rel="modulepreload" href="./_npm/d3@7.9.0/_esm.js">
@@ -171,7 +171,7 @@
 <link rel="modulepreload" href="./_npm/d3-transition@3.0.1/_esm.js">
 <link rel="modulepreload" href="./_npm/d3-zoom@3.0.0/_esm.js">
 <link rel="modulepreload" href="./_npm/interval-tree-1d@1.0.4/_esm.js">
-<link rel="modulepreload" href="./_npm/apache-arrow@17.0.0/_esm.js">
+<link rel="modulepreload" href="./_npm/apache-arrow@18.0.0/_esm.js">
 <link rel="modulepreload" href="./_node/geojson-equality-ts@1.0.2/index.js">
 <link rel="modulepreload" href="./_node/point-in-polygon-hao@1.1.0/index.js">
 <link rel="modulepreload" href="./_node/@turf/jsts@2.7.1/index.js">
@@ -190,7 +190,7 @@
 <link rel="modulepreload" href="./_npm/internmap@2.0.3/_esm.js">
 <link rel="modulepreload" href="./_npm/delaunator@5.0.1/_esm.js">
 <link rel="modulepreload" href="./_npm/binary-search-bounds@2.0.5/_esm.js">
-<link rel="modulepreload" href="./_npm/tslib@2.8.0/_esm.js">
+<link rel="modulepreload" href="./_npm/tslib@2.8.1/_esm.js">
 <link rel="modulepreload" href="./_npm/flatbuffers@24.3.25/_esm.js">
 <link rel="modulepreload" href="./_node/d3-array@1.2.4/index.js">
 <link rel="modulepreload" href="./_node/tinyqueue@2.0.3/index.js">
@@ -203,13 +203,13 @@ import {define} from "./_observablehq/client.js";
 import {registerFile, FileAttachment} from "./_observablehq/stdlib.js";
 import {registerTable} from "./_observablehq/stdlib/duckdb.js";
 
-registerFile("./data/census_data_output.parquet", {"name":"./data/census_data_output.parquet","path":"./_file/data/census_data_output.1374b127.parquet","lastModified":1729167706186});
-registerFile("./data/geo.csv", {"name":"./data/geo.csv","mimeType":"text/csv","path":"./_file/data/geo.8ba75b99.csv","lastModified":1729167706206});
+registerFile("./data/census_data_output.parquet", {"name":"./data/census_data_output.parquet","path":"./_file/data/census_data_output.1374b127.parquet","lastModified":1730891302003});
+registerFile("./data/geo.csv", {"name":"./data/geo.csv","mimeType":"text/csv","path":"./_file/data/geo.8ba75b99.csv","lastModified":1730891302023});
 registerTable("geo", FileAttachment("./data/geo.csv"));
 registerTable("census_data_source", FileAttachment("./data/census_data_output.parquet"));
 
 define({id: "1f3981d9", outputs: ["turf","require","d3","flubber","RadialGlyph","glyphMap","createDiscretiserValue","_drawCellBackground","OSGB","downloadBoundaries","joinCensusDataToGeoJSON","convertGridCsvToGeoJson","context2d"], body: async () => {
-const [turf, {require}, {RadialGlyph}, {glyphMap, createDiscretiserValue, _drawCellBackground}, {OSGB}, {downloadBoundaries, joinCensusDataToGeoJSON, convertGridCsvToGeoJson, context2d}] = await Promise.all([import("./_node/@turf/turf@7.1.0/index.js"), import("./_npm/d3-require@1.3.0/_esm.js"), import("./_import/components/radialglyph.e10c9304.js"), import("./_import/components/gridded-glyphmaps/index.min.e9355c65.js"), import("./_import/components/osgb/index.1d2476df.js"), import("./_import/components/utils.ec49f1d6.js")]);
+const [turf, {require}, {RadialGlyph}, {glyphMap, createDiscretiserValue, _drawCellBackground}, {OSGB}, {downloadBoundaries, joinCensusDataToGeoJSON, convertGridCsvToGeoJson, context2d}] = await Promise.all([import("./_node/@turf/turf@7.1.0/index.js"), import("./_npm/d3-require@1.3.0/_esm.js"), import("./_import/components/radialglyph.e10c9304.js"), import("./_import/components/gridded-glyphmaps/index.min.e22a1d11.js"), import("./_import/components/osgb/index.1d2476df.js"), import("./_import/components/utils.ec49f1d6.js")]);
 // import * as d3 from "npm:d3";
 const d3 = require("d3", "d3-geo-projection");
 const flubber = require("flubber@0.4");
@@ -284,10 +284,11 @@ const geogName = Generators.input(geogNameInput);
 return {geogNameInput,geogName};
 }});
 
-define({id: "a7b68b8f", inputs: ["html","Generators"], outputs: ["tInput","t"], body: (html,Generators) => {
+define({id: "4d5f9e9a", inputs: ["html","Generators"], outputs: ["tInput","t"], body: (html,Generators) => {
 const tInput = html`<input
   style="width: 100%; max-width:200px;"
   type="range"
+  value="1"
   step="0.05"
   min="0"
   max="1"
@@ -316,10 +317,12 @@ AND geo.LA = (SELECT replace(${la_code}, '"', ''''))`;
 return {list_of_codes};
 }});
 
-define({id: "6542bf3e", inputs: ["list_of_codes","downloadBoundaries","geogBoundary"], outputs: ["list_of_code","regular_geodata"], body: async (list_of_codes,downloadBoundaries,geogBoundary) => {
+define({id: "dc26e081", inputs: ["list_of_codes","downloadBoundaries","geogBoundary"], outputs: ["list_of_code","regular_geodata"], body: async (list_of_codes,downloadBoundaries,geogBoundary) => {
 const list_of_code = [...list_of_codes].map((row) => row.code);
 const regular_geodata = await downloadBoundaries(geogBoundary, list_of_code);
-// display(regular_geodata);
+
+// display(transformCoordinates(turf.bbox(regular_geodata)));
+
 return {list_of_code,regular_geodata};
 }});
 
@@ -1225,15 +1228,18 @@ function applyTransformationToShapes(geographicShapes) {
 return {transformCoordinates,transformGeometry,applyTransformationToShapes};
 }});
 
-define({id: "f292d1a7", inputs: ["convertToGeoJSON","applyTransformationToShapes","geographicShapes"], outputs: ["transformedShapes"], body: (convertToGeoJSON,applyTransformationToShapes,geographicShapes) => {
+define({id: "99591def", inputs: ["convertToGeoJSON","applyTransformationToShapes","geographicShapes"], outputs: ["transformedShapes"], body: (convertToGeoJSON,applyTransformationToShapes,geographicShapes) => {
 const transformedShapes = convertToGeoJSON(
   applyTransformationToShapes(geographicShapes)
 );
+
+// display("transformedShapes")
+
 // display(transformedShapes);
 return {transformedShapes};
 }});
 
-define({id: "4913bd0b", inputs: ["_","regular_geodata_withcensus","transformGeometry","turf","grid_geodata_withcensus"], outputs: ["regularGeodataLookup","gridGeodataLookup"], body: (_,regular_geodata_withcensus,transformGeometry,turf,grid_geodata_withcensus) => {
+define({id: "f739de06", inputs: ["_","regular_geodata_withcensus","transformGeometry","turf","grid_geodata_withcensus","transformedShapes"], outputs: ["regularGeodataLookup","gridGeodataLookup","transformedShapesLookup"], body: (_,regular_geodata_withcensus,transformGeometry,turf,grid_geodata_withcensus,transformedShapes) => {
 // const regularGeodataLookup = _.keyBy(
 //   regular_geodata_withcensus.features.map((feat) => {
 //     return { ...feat, centroid: turf.getCoord(turf.centroid(feat.geometry)) };
@@ -1274,8 +1280,18 @@ const gridGeodataLookup = _.keyBy(
   (feat) => feat.properties.code
 );
 
-// display(regularGeodataLookup);
-return {regularGeodataLookup,gridGeodataLookup};
+
+const transformedShapesLookup = _.keyBy(
+  transformedShapes.features.map((feat) => {
+    return { ...feat, centroid: turf.getCoord(turf.centroid(feat.geometry)) };
+  }),
+  (feat) => feat.properties.code
+);
+
+// display("transformedShapesLookup");
+// display(transformedShapesLookup);
+
+return {regularGeodataLookup,gridGeodataLookup,transformedShapesLookup};
 }});
 
 define({id: "21da4792", inputs: ["Inputs","Generators","createDiscretiserValue"], outputs: ["glyphmapTypeInput","glyphmapType","valueDiscretiser"], body: (Inputs,Generators,createDiscretiserValue) => {
@@ -1298,7 +1314,7 @@ function valueDiscretiser(geomLookup) {
 return {glyphmapTypeInput,glyphmapType,valueDiscretiser};
 }});
 
-define({id: "47e2dd09", inputs: ["turf","createDiscretiserValue"], outputs: ["valueDiscretiserInMorph"], body: (turf,createDiscretiserValue) => {
+define({id: "25a618fe", inputs: ["turf","createDiscretiserValue"], outputs: ["valueDiscretiserInMorph"], body: (turf,createDiscretiserValue) => {
 function valueDiscretiserInMorph(inp) {
   // create lookup on the fly
   let geomLookup = Object.fromEntries(
@@ -1323,25 +1339,18 @@ function valueDiscretiserInMorph(inp) {
   });
 }
 
-// display(valueDiscretiserInMorph(dataInMorph));
-// display("datain morph");
-// display(dataInMorph);
-// display(transformCoordinates(turf.bbox(regular_geodata)));
 return {valueDiscretiserInMorph};
 }});
 
-define({id: "b2814c32", inputs: ["turf","regular_geodata","transformedShapes","data","regularGeodataLookup","d3","insideCell","drawRadialMultivariateGlyph"], outputs: ["glyphMapSpec"], body: (turf,regular_geodata,transformedShapes,data,regularGeodataLookup,d3,insideCell,drawRadialMultivariateGlyph) => {
+define({id: "fae5fd6f", inputs: ["transformCoordinates","turf","regular_geodata","data","regularGeodataLookup","d3","insideCell","drawRadialMultivariateGlyph"], outputs: ["glyphMapSpec"], body: (transformCoordinates,turf,regular_geodata,data,regularGeodataLookup,d3,insideCell,drawRadialMultivariateGlyph) => {
 // glyphmap basic specs
-function glyphMapSpec(width, height) {
+
+function glyphMapSpec(width = 800, height = 600) {
   // console.log("in glyphmapspec", width, height);
-  const bbox = turf.bbox(regular_geodata);
   return {
     // coordType: "notmercator",
-    initialBB: turf.bbox(transformedShapes),
-    // initialBB: [
-    //   ...proj.toGeo([bbox[0], bbox[1]]),
-    //   ...proj.toGeo([bbox[2], bbox[3]]),
-    // ],
+    initialBB: transformCoordinates(turf.bbox(regular_geodata)),
+
     data: Object.values(data),
     getLocationFn: (row) => regularGeodataLookup[row.code]?.centroid,
     discretisationShape: "grid",
@@ -1357,10 +1366,16 @@ function glyphMapSpec(width, height) {
     customMap: {
       scaleParams: [],
 
-      initFn: (cells, cellSize, global, panel) => {},
+
+      // discretiserFn: valueDiscretiser(regularGeodataLookup),
+
+      initFn: (cells, cellSize, global, panel) => {
+        // console.log("initFn", cells, cellSize, global, panel);
+      },
 
       preAggrFn: (cells, cellSize, global, panel) => {
-        // console.log(global);
+        // console.log("global", global);
+
       },
 
       aggrFn: (cell, row, weight, global, panel) => {
@@ -1407,6 +1422,11 @@ function glyphMapSpec(width, height) {
 
       drawFn: (cell, x, y, cellSize, ctx, global, panel) => {
         const boundary = cell.getBoundary(0);
+
+
+        // console.log("boundary", boundary);
+
+
         if (boundary[0] != boundary[boundary.length - 1]) {
           boundary.push(boundary[0]);
         }
@@ -1429,35 +1449,39 @@ function glyphMapSpec(width, height) {
 
         //draw a radial glyph -> change the array to real data (between 0 and 1)
         drawRadialMultivariateGlyph([0.5, 0.1, 0.9, 0.3], x, y, cellSize, ctx);
-        // drawRadialMultivariateGlyph(
-        //   [cell.deprivation, cell.vehicle, cell.heating, cell.health],
-        //   x,
-        //   y,
-        //   cellSize,
-        //   ctx
-        // );
 
-        // let rg = new RadialGlyph([
-        //   cell.deprivation,
-        //   cell.vehicle,
-        //   cell.heating,
-        //   cell.health,
-        // ]);
-        // rg.draw(ctx, x, y, cellSize / 2);
       },
-
       postDrawFn: (cells, cellSize, ctx, global, panel) => {},
+      tooltipTextFn: (cell) => {},
 
-      tooltipTextFn: (cell) => {
-        console.log(cell.deprivation);
-      },
     },
   };
 }
 return {glyphMapSpec};
 }});
 
-define({id: "a8ee3415", inputs: ["glyphMap","glyphMapSpec","valueDiscretiser","regularGeodataLookup","valueDiscretiserInMorph","transformedShapes"], outputs: ["createGlyphMap","glyphmap"], body: (glyphMap,glyphMapSpec,valueDiscretiser,regularGeodataLookup,valueDiscretiserInMorph,transformedShapes) => {
+define({id: "d8dfe994", body: () => {
+// a workaround for observable reactivity
+// const decarbonisationGlyph = glyphMap({
+//   ...glyphMapSpec(),
+//   discretiserFn: valueDiscretiserInMorph(transformedShapes),
+// });
+}});
+
+define({id: "f250ba26", inputs: ["t"], body: (t) => {
+t;
+// glyphMap(glyphMapSpec()).setGlyph({
+//   discretiserFn: valueDiscretiser(transformedShapesLookup),
+// });
+console.log("evaluated");
+// display(decarbonisationGlyph);
+}});
+
+define({id: "e19f5f4a", body: () => {
+// glyphmapSpec().setData(transformedShapes.features);
+}});
+
+define({id: "aec38d74", inputs: ["glyphMap","glyphMapSpec","valueDiscretiser","regularGeodataLookup"], outputs: ["createGlyphMap"], body: (glyphMap,glyphMapSpec,valueDiscretiser,regularGeodataLookup) => {
 function createGlyphMap(glyphmapType, { width, height }) {
   // console.log(width, height);
   if (glyphmapType == "Polygons") {
@@ -1466,20 +1490,19 @@ function createGlyphMap(glyphmapType, { width, height }) {
       discretiserFn: valueDiscretiser(regularGeodataLookup),
     });
   } else if (glyphmapType == "Gridmap") {
-    return glyphMap({
-      ...glyphMapSpec(width, height), //takes the base spec...
-      discretiserFn: valueDiscretiserInMorph(transformedShapes),
-    });
+    return glyphMap(glyphMapSpec(width, height));
   } else if (glyphmapType == "Gridded") {
     return glyphMap(glyphMapSpec(width, height)); //uses the base spec as it (by default, it grids)
   }
 }
 
-const glyphmap = glyphMapSpec();
+
+// const glyphmap = glyphMapSpec();
+
 
 // display(createGlyphMap(glyphmapType));
 // display(valueDiscretiser(regularGeodataLookup));
-return {createGlyphMap,glyphmap};
+return {createGlyphMap};
 }});
 
 define({id: "92e60971", inputs: ["joinCensusDataToGeoJSON","census_data","regular_geodata","grid_geodata"], outputs: ["regular_geodata_withcensus","grid_geodata_withcensus"], body: (joinCensusDataToGeoJSON,census_data,regular_geodata,grid_geodata) => {
@@ -1574,7 +1597,7 @@ return {insideCell};
 body, html {
   height: 100%;
   margin: 0 !important;
-  overflow: hidden;
+  /* overflow: hidden; */
   padding: 0;
 }
 
@@ -1590,7 +1613,7 @@ body, html {
          <div style="padding:10px;"> <observablehq-loading></observablehq-loading><!--:2d300212:--> </div>
 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<div style="padding:10px;"> <observablehq-loading></observablehq-loading><!--:71bd6feb:--> </div>
 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<div style="padding:10px;"> <observablehq-loading></observablehq-loading><!--:c0e452dc:--> </div>
-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<div style="padding:10px;"> <small>Drag to morph (choose 'Gridmap')</small> <observablehq-loading></observablehq-loading><!--:d5a91e5c:--> </div>  
+&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<div style="padding:10px;"> <small>Drag to morph (choose 'Gridmap')</small> <observablehq-loading></observablehq-loading><!--:d5a91e5c:--> </div>
         <hr>
         <div style="padding:10px;"> List of layers</div>
     </div>
@@ -1613,11 +1636,11 @@ body, html {
 <!-- Select the Local authority from the list below -->
 <div class="observablehq observablehq--block"><!--:17a1fc11:--></div>
 <div class="observablehq observablehq--block"><!--:0bef96a5:--></div>
-<div class="observablehq observablehq--block"><!--:a7b68b8f:--></div>
+<div class="observablehq observablehq--block"><!--:4d5f9e9a:--></div>
 <div class="observablehq observablehq--block"><!--:76ba71c3:--></div>
 <div class="observablehq observablehq--block"><!--:ac7e408e:--></div>
 <div class="observablehq observablehq--block"><!--:cad06486:--></div>
-<div class="observablehq observablehq--block"><!--:6542bf3e:--></div>
+<div class="observablehq observablehq--block"><!--:dc26e081:--></div>
 <div class="observablehq observablehq--block"><!--:0edc8540:--></div>
 <div class="observablehq observablehq--block"><!--:47b53055:--></div>
 <!-- ------------------ # Morphing Geometry Functions ------------------  -->
@@ -1637,12 +1660,15 @@ body, html {
 <div class="observablehq observablehq--block"><!--:147250e0:--></div>
 <!-- ------------------ # Gridded-Glyphmap Functions ------------------  -->
 <div class="observablehq observablehq--block"><!--:e38f4f2a:--></div>
-<div class="observablehq observablehq--block"><!--:f292d1a7:--></div>
-<div class="observablehq observablehq--block"><!--:4913bd0b:--></div>
+<div class="observablehq observablehq--block"><!--:99591def:--></div>
+<div class="observablehq observablehq--block"><!--:f739de06:--></div>
 <div class="observablehq observablehq--block"><!--:21da4792:--></div>
-<div class="observablehq observablehq--block"><!--:47e2dd09:--></div>
-<div class="observablehq observablehq--block"><!--:b2814c32:--></div>
-<div class="observablehq observablehq--block"><!--:a8ee3415:--></div>
+<div class="observablehq observablehq--block"><!--:25a618fe:--></div>
+<div class="observablehq observablehq--block"><!--:fae5fd6f:--></div>
+<div class="observablehq observablehq--block"><!--:d8dfe994:--></div>
+<div class="observablehq observablehq--block"><!--:f250ba26:--></div>
+<div class="observablehq observablehq--block"><!--:e19f5f4a:--></div>
+<div class="observablehq observablehq--block"><!--:aec38d74:--></div>
 <div class="observablehq observablehq--block"><!--:92e60971:--></div>
 <div class="observablehq observablehq--block"><!--:246c80d3:--></div>
 <div class="observablehq observablehq--block"><!--:9d040433:--></div>
